[package]
authors = ["Narrowlink <opensource@narrowlink.com>"]
description = "Multi protocol Proxy Implementation"
edition = '2021'
homepage = 'https://github.com/narrowlink/proxy-stream'
license = 'MIT'
name = "proxy-stream"
version = "0.0.2"
keywords = ["proxy", "tokio", "socks", "socks5"]

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros"] }
thiserror = { version = "2.0" }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1.3"
resumable-io = "0.0.1"
log = "0.4"
futures = { version = "0.3" }
[dev-dependencies]
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
